--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -1,22 +1,40 @@
+# ─────────────────────────────────────────────────────────────────────────────
+# Flutter CI — Lint, Analyze, Test
+# Runs on every push/PR to main. Ensures code quality before merge.
+# ─────────────────────────────────────────────────────────────────────────────
 name: Flutter CI
 
 on:
   push:
     branches: [main, develop]
+    paths:
+      - 'flutter_client/**'
+      - '.github/workflows/flutter-ci.yml'
   pull_request:
     branches: [main]
+    paths:
+      - 'flutter_client/**'
+      - '.github/workflows/flutter-ci.yml'
+
+# Cancel in-progress runs for the same branch/PR
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  analyze-and-test:
+  analyze:
+    name: Analyze & Format
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: flutter_client
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - uses: subosito/flutter-action@v2
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.24.0'
           channel: stable
@@ -25,18 +43,41 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Analyze
-        run: flutter analyze
-
-      - name: Check formatting
+      - name: Verify formatting
         run: dart format --set-exit-if-changed .
 
-      - name: Run tests
+      - name: Run analyzer
+        run: flutter analyze --no-fatal-infos
+
+  test:
+    name: Test & Coverage
+    runs-on: ubuntu-latest
+    needs: analyze
+    defaults:
+      run:
+        working-directory: flutter_client
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.24.0'
+          channel: stable
+          cache: true
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Run tests with coverage
         run: flutter test --coverage
 
-      - name: Upload coverage
-        if: success()
+      - name: Upload coverage report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: flutter_client/coverage/lcov.info
+          retention-days: 14
