feat: comprehensive docs, audit fixes, demo artifacts & nested README index
- Add DOCUMENTATION/ folder (8 files: architecture, API reference, setup, agent system, screens, CI/CD, server, repo map)
- Add GUIDE.md (LG development guide for Antigravity context)
- Add community files: CONTRIBUTING.md, SECURITY.md, CHANGELOG.md
- Add demo/ with flutter-plugins.txt and flutter-plugins-dependencies.txt
- Add analysis_options.yaml with flutter_lints + 18 custom rules
- Deep audit: 29 fixes across services, providers, screens, config
- README: nested numbered index, 4 ASCII diagrams, Getting Started with Antigravity, Future Work by app category, anchor navigation
- Security: --dart-define support, flutter_secure_storage wiring
- Architecture: 5-layer import enforcement, dispose() methods, error handling"

--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -101,7 +101,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: node_server
+        working-directory: server
 
     steps:
       - name: Checkout repository
